stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_tuple_projection_oob.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_tuple_projection_oob.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × tuple projection is out of bounds
   ╭─[tests/fixtures/diagnostics/types/inference_tuple_projection_oob.ml:2:3]
 1 │ fn pick(pair: (i64, bool)) {
 2 │   pair.2
   ·   ───┬──
   ·      ╰── this tuple does not have a field at the requested index
 3 │ }
   ╰────
  help: use a tuple projection index that exists
